--- a/tex_live/2_SecurityControls.tex
+++ b/tex_live/2_SecurityControls.tex
@@ -9,19 +9,6 @@
 % [3] Protection and control of information sharing in Multics
 % Jerome H. Saltzer (MIT, Project MAC)
 
-
-%# TODO Basic questions:
-% Why:
-
-% What:
-
-% How:
-
-% Conclusion:
-
-%# TODO Glossary:
-
-
 % # --------------------------------------------------------------------------------- #
 
 \section{Design Principles}
@@ -145,7 +132,7 @@ The reason why the proctection information is associated with the addressing des
 in \textit{multiprocessor system} such as Multics, two same processes may be executing at a same time, so single 
 protection specification associated with the data is not sufficient.
 
-%TODO add 'Figure 1. -- Multics descriptor' MIT-LCS.pdf (p) 75
+%# TODO add 'Figure 1. -- Multics descriptor' MIT-LCS.pdf (p) 75
 
 \begin{enumerate}
     \item Physical address and size of the segment based on this descriptor.
