hopefuly last one

--- a/tex_live/1_MulticsHistory.tex
+++ b/tex_live/1_MulticsHistory.tex
@@ -57,8 +57,12 @@ Were described by Corbato and Vyssotsky in # PRIDAJ \ref{Introduction and Overvi
 
 The team's ambition was that Multics would change the way people used and programmed computers.
 
-%# TODO daj ako quote
+%# TODO qoute Garnfinkel
 % "One of the great unanticipated discoveries of Project MAC was that 
 % when more than one person can use a computer at the same time, those people will
 % use the computer to communicate with each other." 
 % -- Simson Garfinkel, Architects of the Information Society
+
+%# TODO qoute Thompson
+% To what extent should one trust a statement that a program is free of Trojan horses? 
+% Perhaps it is more important to trust the people who wrote the software.
